# OghmaNano

./: README.md  makefile
oghma_core/: Makefile.am  README.md  configure.ac
oghma_core/DEBIAN/: changelog  control  control.new  links  postinst  postrm  prerm
oghma_core/cluster/: cal_path.c  clean.c  command.c  debug.c  get_data.c  head.c  inp.c  inp.h  inp_struct.h  ip.c  jobs.c  jobs_save_load.c  kill_pid.c  killall.c  load.c  log.c  main.c  message.c  node.c  nodes.c  packet.c  poweroff.c  quit.c  register.c  run_jobs.c  rx_file.c  rx_loop.c  sleep.c  state.c  state.h  sync.c  tx_file.c  util.c  util.h
oghma_core/include/: advmath.h  box.h  cache.h  cache_struct.h  cal_path.h  circuit.h  circuit_struct.h  clock.h  code_ctrl.h  color.h  color_struct.h  compile_time.h  component.h  component_fun.h  config.h  contact_struct.h  contacts.h  contacts_vti_store.h  contacts_vti_store_struct.h  dat_file.h  dat_file_struct.h  detector.h  detector_struct.h  device.h  device_fun.h  dim.h  dll_export.h  dos.h  dos_an.h  dos_an_fun.h  dos_struct.h  dump.h  dump_ctrl.h  dump_ctrl_fun.h  enabled_libs.h  epitaxy.h  epitaxy_struct.h  exciton.h  exciton_fun.h  exciton_material.h  (+122 more)
oghma_core/lib/: Makefile.am  cal_path.c  complex_solver_interface.c  epitaxy_materials.c  errors.c  g_io.c  g_ipc.c  g_strings.c  gui_hooks.c  hard_limit.c  initial.c  inp.c  log.c  newton_interface.c  path_ops.c  solver_interface.c  util.c  util_dir.c  util_dir_remove.c  util_str.c  util_str_clean.c  util_str_number.c  util_units.c  zip_buffer.c  zip_file_utils.c  zip_file_write.c
oghma_core/libdump/: dump_singlet.c
oghma_core/libi/: Makefile.am  math_xy.c  math_xy_calculus.c  math_xy_check.c  math_xy_delta.c  math_xy_dft.c  math_xy_div.c  math_xy_hist.c  math_xy_interpolate.c  math_xy_load.c  math_xy_load_by_col.c  math_xy_memory.c  math_xy_min_max.c  math_xy_mul.c  math_xy_noise.c  math_xy_opp.c  math_xy_peak.c  math_xy_polyfit.c  math_xy_save.c  math_xy_scale.c  math_xy_smooth.c  math_xy_sort.c  math_xy_stats.c
oghma_core/libjson/: Makefile.am  json.c  json_bib.c  json_bib_load.c  json_bib_save.c  json_chk_sum.c  json_clip_copy.c  json_clip_segment_replace.c  json_clip_segments_append.c  json_compat.c  json_cpy.c  json_delete.c  json_dump.c  json_fast.c  json_find_sim_struct.c  json_free.c  json_import.c  json_init.c  json_is_oghma_file.c  json_obj.c  json_path.c  json_python_interface.c  json_python_interface_bib.c  json_search.c  json_segment_counter.c  json_segments.c  json_set_data.c  json_string.c  json_to_latex.c  json_update_random_ids.c  json_yml_decode.c  yml_peek.c
oghma_core/liblua/: Makefile.am  loslib.c
oghma_core/libmemory/: 1d.c  1d_double.c  2d.c  2d_long_double.c  3d.c  3d_int.c  4d.c  4d_long_double.c  Makefile.am  heat_zxy_long_double.c  light_l_double.c  light_y_long_double.c  light_zxy_double.c  light_zxy_p_object.c  light_zxyl_double.c  light_zxyl_float.c  light_zxyl_long_double.c  light_zxyl_long_double_complex.c  matrix.c  matrix_cpy.c  matrix_free.c  matrix_solver_memory.c  memory.c  memory_basic.c  srh_long_double.c  y_double.c  y_int.c  zx_epitaxy_int.c  zx_int.c  zx_layer_p_object.c  zx_long_double.c  zxl_double.c  zxy_double.c  zxy_float.c  zxy_int.c  zxy_long_double.c  zxy_long_double_complex.c  zxy_p_object.c  zy_int.c  zy_long_double.c
oghma_core/libray/: Makefile.am  build.c  detector_dump_bins.c  ray.c  ray_basic_shapes.c  ray_configure_scene.c  ray_dump.c  ray_dump_all_rays.c  ray_dump_all_to_screen.c  ray_dump_debug.c  ray_dump_escape.c  ray_dump_snapshots.c  ray_engine_add_src_at_zx.c  ray_engine_add_src_at_zxy.c  ray_engine_add_srcs.c  ray_engine_config.c  ray_engine_free.c  ray_engine_init.c  ray_engine_malloc.c  ray_intersect.c  ray_lib.c  ray_memory.c  ray_objects.c  ray_solve_all.c  ray_src.c  ray_src_dump.c  ray_srcs.c  ray_stats.c  ray_thread_solve.c  ray_to_zxy.c  search_obj.c  solve.c
oghma_core/librpn/: Makefile.am  edge.c  eval.c  eval_function_1.c  eval_function_2.c  eval_opp.c  function.c  opp.c  rpn.c  rpn_equation.c  rpn_free.c  rpn_init.c  rpn_malloc.c  rpn_negation.c  rpn_test.c  stack.c  vars.c
oghma_core/libsavefile/: Makefile.am  gl_light_load_save.c  json_contacts.c  json_data_view_gui.c  json_data_view_gui_3d_fixup.c  json_db_filter.c  json_db_materials.c  json_db_morphology.c  json_db_shape.c  json_db_spectra.c  json_epitaxy.c  json_folder.c  json_folder_backup.c  json_folder_material.c  json_folder_morphology.c  json_folder_multi_plot_dir.c  json_folder_snapshots.c  json_gl_lights.c  json_groups.c  json_local.c  json_mesh_math.c  json_shape.c  json_template.c  json_template_bib.c  json_template_circuit.c  json_template_dump.c  json_template_electrical_boundary.c  json_template_electrical_solver.c  json_template_electrical_solver_cache.c  json_template_electrical_solver_poisson.c  json_template_epitaxy.c  json_template_exciton.c  json_template_fits.c  json_template_fits_duplicate.c  json_template_fits_fit_config.c  json_template_fits_fit_vars.c  json_template_fits_fits.c  json_template_fits_rules.c  json_template_gl.c  json_template_gui_config.c  (+44 more)
oghma_core/libsimplex/: Makefile.am  simplex_contract.c  simplex_dump.c  simplex_expand.c  simplex_init.c  simplex_reflect.c  simplex_run.c  simplex_shrink.c  simplex_utils.c
oghma_core/licenses/: HYG-Database.txt  LICENSE.txt  Lato.txt  README.txt  UMFPACK_Version_5.0.2.txt  lapack-3.8.0.txt  libzip.txt  matplotlib.txt
oghma_core/man/: Makefile.am
oghma_data/: Makefile.am  README.md  configure.ac
oghma_data/cie_color/: data.json
oghma_data/device_lib/: a-silicon.json  cigs.json  eqe.json  filter.json  morphology.json  poly-silicon.json  tandem.json  tandem_si_perovskite.json
oghma_data/morphology/: data.json
oghma_data/shape/: data.json
oghma_gui/: Makefile.am  configure.ac
oghma_gui/bib/: cite.bib
oghma_gui/css/: style.css
oghma_gui/desktop/: Makefile.am  oghma-oghma.xml  oghma.desktop
oghma_gui/gui/: Makefile.am  NSVGimage.py  QAction_lock.py  QChangeLog.py  QColorMap.py  QColorPicker.py  QComboBoxFiles.py  QComboBoxFits.py  QComboBoxLang.py  QComboBoxLayers.py  (+425 more)
(+746 files in other folders)
